<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="41dp"
        android:layout_height="34dp"
        android:src="@drawable/ic_projetos"
        android:contentDescription="@string/imagem_projeto"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/nomeProjetoLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nomeProjetoItem"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_toEndOf="@+id/imageView5" />

    <TextView
        android:id="@+id/descricaoLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nomeProjetoLista"
        android:layout_toEndOf="@+id/imageView5"
        android:text="@string/descricaoItem" />

    <Space
        android:layout_width="404dp"
        android:layout_height="14dp"
        android:layout_below="@+id/imageView5"
        android:layout_alignParentStart="true" />
</RelativeLayout>