<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.luizgbraganca.avante123.AddProjeto"
    android:weightSum="1">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:text="@string/nome_projeto"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08" />

    <EditText
        android:id="@+id/nomeProjeto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edt_txt_nome_projeto"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07" />

    <EditText
        android:id="@+id/descricaoTarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:ems="10"
        android:hint="@string/edt_txt_descricao"
        android:inputType="textMultiLine" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10" />

    <EditText
        android:id="@+id/nomeCriador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Nome do Criador"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.12" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="91dp">

        <Button
            android:id="@+id/addProj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_add_projeto" />
    </RelativeLayout>
</LinearLayout>